--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ apply plugin: 'idea'
 
 version = "1.0"
 group = "gay.ttf.mended"
-archivesBaseName = "mended"
+archivesBaseName = "MendedMending"
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
